# mcp-eyes

./: .gitignore  AGENTS.md  AGENT_SETUP.md  LICENSE  README.md  pyproject.toml
examples/: claude-code-config.json  continue-ollama-config.json
mcp-vision-extension/: .env.example  AGENTS.md  AGENT_SETUP.md  README.md  pyproject.toml  requirements.txt
mcp-vision-extension/examples/: anthropic-protocol-config.json  claude-code-config.json  continue-ollama-config.json  cursor-config.json
mcp-vision-extension/src/mcp_eyes/: __main__.py  cli.py  config.py  image_utils.py  presets.py  prompts.py  server.py
mcp-vision-extension/src/mcp_eyes/providers/: __init__.py  anthropic_compat.py
mcp-vision-extension/src/vision_extension/: __init__.py  __main__.py  cli.py  config.py  image_utils.py  presets.py  prompts.py  server.py
mcp-vision-extension/src/vision_extension/providers/: __init__.py  anthropic_compat.py  base.py  openai_compat.py
skills/: README.md
skills-vision-extension/: README.md
skills-vision-extension/vision-extension/: SKILL.md
skills/install-mcp-eyes/: SKILL.md
skills/mcp-eyes/: SKILL.md
skills/use-mcp-eyes/: SKILL.md
src/mcp_eyes/: __init__.py  __main__.py  cli.py  init_template.py  prompts.py
src/mcp_eyes/providers/: base.py  openai_compat.py
