[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-extension"
version = "0.1.0"
description = "Give text-only reasoning LLMs vision capability. An MCP server that pairs any long-context reasoning model with any vision model, locked into description-only mode."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vision-extension contributors" }]
keywords = ["mcp", "vision", "llm", "claude", "anthropic", "openai", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
resize = ["Pillow>=10.0"]
dev = ["pytest>=7", "ruff>=0.5"]

[project.scripts]
vision-extension = "vision_extension.server:main"

[project.urls]
Homepage = "https://github.com/loudMore/vision-extension"
Issues = "https://github.com/loudMore/vision-extension/issues"

[tool.setuptools.packages.find]
where = ["src"]
